# compilers-labs

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  conanfile.py  determinstic-finite-automaton.h  diagnostics.h  example.cpp  finite-automata.cpp  grammar.cpp  grammar.h  helper.h  id.cpp  lexer.cpp  lexer.h  main.cpp  nondeterminstic-finite-automaton.h  parser.cpp  parser.h  regular-expression.h  system64.hlvm  test.txt  test2.txt  test3.txt  xmake.lua
ast/: ast.cpp  ast.h  decl.cpp  decl.h  expr.cpp  expr.h  node-visitor  node-visitor.cpp  node-visitor.h  node.cpp  node.h  program.h  recursive-node-visitor.cpp  recursive-node-visitor.h  stmt.cpp  stmt.h  type.cpp  type.h
docs/: example.md
ir/: function.h  instruction.h  ir-builder.h  operand.h
lex/: lexer.cpp  lexer.h  token.h
parser/: parser.cpp  parser.h
semantic/: context.h  frame.h  intepreter.cpp  intepreter.h  return-signal.h  scope.h  semantic-analyzer.cpp  semantic-analyzer.h  symbol-table.h  symbol.h  type-checker.h  type.h
test/: automaton-test.cpp  expr.g  grammar.cpp  hlvm.g  simple.g  test.g
